# ai_safety_project

./: .gitignore  CLAUDE.md  README.md  collect_interventions_modal.sh  index.html  pyproject.toml  requirements.txt  results  run_interventions_modal.sh  scripts.md  summary-07-13-12:11.md  summary-07-13.md  summary.md  ter 5e927fc
data/: advbench.json  catqa_Adult Content.json  catqa_Child Abuse.json  catqa_Economic Harm.json  catqa_Fraud_Deception.json  catqa_Hate_Harass_Violence.json  catqa_Hate_Harass_Violence_test.json  catqa_Illegal Activity.json  catqa_Malware Viruses.json  catqa_Physical Harm.json  catqa_Political Campaigning.json  catqa_Privacy Violation Activity.json  catqa_Tailored Financial Advice.json  dan_advbench.json  dan_jbb.json  dan_prompt.txt  example_test_harmless.json  gcg-advsuffix.json  gennothink_gcg_advbench.json  human-seed-50-adv.json  jbb.json  pap-persuasion.json  plane_advbench.json  qwen2-gcg-advsuffix.json  sorry-badq.json  test_advbench.json  test_prompt.txt  xstest-harmless.json
logs/: intervene_14809310.err  intervene_14809310.out  intervene_14809450.out  intervene_14810795.out  intervene_14810861.err  intervene_14810861.out  intervene_14810924.err  intervene_14810924.out  main_14808688.err  main_14808688.out
output_legacy/: inversion-intervene0.json  inversion-intervene1.json  inversion-intervene10.json  inversion-intervene11.json  inversion-intervene12.json  inversion-intervene14.json  inversion-intervene16.json  inversion-intervene17.json  inversion-intervene18.json  inversion-intervene19.json  inversion-intervene2.json  inversion-intervene20.json  inversion-intervene21.json  inversion-intervene22.json  inversion-intervene23.json  inversion-intervene24.json  inversion-intervene25.json  inversion-intervene3.json  (+8 more)
(+1268 files in other folders)
