[project]
name = "ai-safety-project"
version = "0.1.0"
description = "LLMs Encode Harmfulness and Refusal Separately — replication & extension"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "accelerate",
    "transformers",
    "tokenizers",
    "huggingface-hub",
    "tqdm",
    "numpy",
    "matplotlib",
    "protobuf",
    "requests",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true